--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,22 @@
   </head>
 
   <body>
-    <% if notice %><p role="alert" class="alert alert-primary"><%= notice %></p><% end %>
-    <% if alert %><p role="alert" class="alert alert-danger"><%= alert %></p><% end %>
-    <%= yield %>
+    <div class="navbar navbar-dark bg-primary">
+      <div class="container">
+        <span class="navbar-brand">
+        Grimoire
+        </span>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4 col-xxl-3">
+          <% if notice %><p role="alert" class="alert alert-primary"><%= notice %></p><% end %>
+          <% if alert %><p role="alert" class="alert alert-danger"><%= alert %></p><% end %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
