--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,6 +30,18 @@
     <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
   </div>
 
+  <div class="mb-3">
+    <%= f.label :username, class: "form-label" %>
+    <%= f.text_field :username, class: "form-control" %>
+    <span class="form-text">This will be in the URL of your profile.</span>
+  </div>
+
+  <div class="mb-3">
+    <%= f.label :display_name, class: "form-label" %>
+    <%= f.text_field :display_name, autocomplete: "name", class: "form-control" %>
+    <span class="form-text">This will be how your name is displayed on the site.</span>
+  </div>
+
   <div class="actions">
     <%= f.submit "Update", class: "btn btn-primary" %>
   </div>
