--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
   </head>
 
   <body>
@@ -30,8 +29,8 @@
     </div>
     <div class="bg-light mt-5 p-3">
       <div class="container text-end text-muted">
-        Grimoire is an <a class="text-reset fw-semibold text-decoration-none" href="https://www.oddevan.com/">oddEvan</a> project.
-        | <a class="text-reset fw-semibold text-decoration-none" href="https://www.oddevan.com/privacy-policy">Privacy Policy</a>
+        <a class="text-reset text-decoration-none" href="https://www.oddevan.com/">An oddEvan project</a>
+        | <a class="text-reset text-decoration-none" href="https://www.oddevan.com/privacy-policy">Privacy Policy</a>
       </div>
     </div>
 
